--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promise generator</title>
     <link rel="stylesheet" href="css/common.css" />
+    <!-- <link rel="stylesheet" href="notiflix/dist/notiflix-3.2.6.min.css" /> -->
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
